src/App.css
body {
  background: url('./images/background.jpg');
}

h2 {
  margin: 15px 0 5px;
}

.jumbotron {
  padding: 10px;
}

.alert-container {
  margin: 15px;
  font-size: 1.2em;
}

.landing {
  position: fixed;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100vh;
  z-index: -1;
}

.landing-inner {
  color: #bada55;
  height: 100%;
  width: 80%;
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.green-text {
  color: #bada55;
}

.home-button {
  color: #bada55 !important;
}

.home-button:hover {
  text-decoration: none;
}

button.btn-outline-success {
  color: #bada55;
  border-color: #bada55;
}

